feature: added fonts , integrated api for jobs list

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
+@import "./common/styles/common.css";
 html,
 body {
   margin: 0;
   padding: 0;
   height: 100%;
+}
+
+*{
+  font-family: LexendRegular;
 }
